--- a/src/Template/cup/form/view/list.twig
+++ b/src/Template/cup/form/view/list.twig
@@ -38,7 +38,7 @@
                                     <tr>
                                         <td data-order="{{ item.date.getTimestamp() }}">
                                             <a href="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}" class="d-block">
-                                                {{ item.date|date('d.m.Y H:i:s') }}
+                                                {{ item.date|df('d.m.Y H:i:s') }}
                                             </a>
                                         </td>
                                         <td>{{ item.uuid }}</td>
