--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -130,8 +130,8 @@
                                             {{ reference('/App/Domain/Types/UserLevelType::LIST', item.level) }}
                                             ({{ reference('/App/Domain/Types/UserStatusType::LIST', item.status) }})
                                         </td>
-                                        <td data-order="{{ item.register.getTimestamp() }}">{{ item.register|date('d.m.Y H:i:s') }}</td>
-                                        <td data-order="{{ item.session.date.getTimestamp() }}">{{ item.session.date ? item.session.date|date('d.m.Y H:i:s') : '' }}</td>
+                                        <td data-order="{{ item.register.getTimestamp() }}">{{ item.register|df('d.m.Y H:i:s') }}</td>
+                                        <td data-order="{{ item.session.date.getTimestamp() }}">{{ item.session.date ? item.session.date|df('d.m.Y H:i:s') : '' }}</td>
                                         <td class="text-center">
                                             <div class="btn-group dropdown">
                                                 <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
