--- a/theme/default/catalog.cart.complete.twig
+++ b/theme/default/catalog.cart.complete.twig
@@ -63,7 +63,7 @@
                         </tr>
                         <tr>
                             <td>Дата доставки</td>
-                            <td>{{ order.shipping|date('d.m.Y H:i') }}</td>
+                            <td>{{ order.shipping|df('d.m.Y H:i') }}</td>
                             <td></td>
                         </tr>
                     </table>
