--- a/theme/default/common/footer.twig
+++ b/theme/default/common/footer.twig
@@ -35,7 +35,7 @@
                             <div class="lp-content">
                                 {% set publication = publication(null, {'date': 'desc'}, 1) %}
                                 <h6>{{ publication.title }}</h6>
-                                <span>{{ publication.date|date('d.m.Y') }}</span>
+                                <span>{{ publication.date|df('d.m.Y') }}</span>
                                 {{ publication.content.short|truncate(250)|raw }}
                             </div>
                         </div>
