--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -288,7 +288,7 @@
                                 </ul>
                             </nav>
                             <div class="copyright ml-auto">
-                                Сделано с <i class="fa fa-heart heart text-danger"></i> в <a href="https://github.com/0x12f">0x12f</a>, {{ 'now'|date('Y') }}
+                                Сделано с <i class="fa fa-heart heart text-danger"></i> в <a href="https://github.com/0x12f">0x12f</a>, {{ 'now'|df('Y') }}
                             </div>
                         </div>
                     </footer>
