--- a/src/Template/cup/task.twig
+++ b/src/Template/cup/task.twig
@@ -18,7 +18,7 @@
                         <a href="#">
                             <div class="notif-content pl-4 pr-3">
                                 <span class="block">{{ task.action }} ({{ task.status }})</span>
-                                <span class="time">{{ task.date|date('d.m.Y H:i:s') }}</span>
+                                <span class="time">{{ task.date|df('d.m.Y H:i:s') }}</span>
                             </div>
                         </a>
                     {% endfor %}
