--- a/src/Template/cup/user/subscriber/index.twig
+++ b/src/Template/cup/user/subscriber/index.twig
@@ -39,7 +39,7 @@
                                     <td>
                                         {{ item.email }}
                                     </td>
-                                    <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|date('d.m.Y H:i:s') }}</td>
+                                    <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i:s') }}</td>
                                     <td class="text-center">
                                         <div class="btn-group dropdown">
                                             <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
