--- a/theme/default/catalog.mail.client.twig
+++ b/theme/default/catalog.mail.client.twig
@@ -45,7 +45,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>Дата доставки</td>
-                                                    <td>{{ order.shipping|date('d.m.Y H:i') }}</td>
+                                                    <td>{{ order.shipping|df('d.m.Y H:i') }}</td>
                                                 </tr>
                                             </table>
 
