--- a/plugin/TradeMaster/templates/trademaster.twig
+++ b/plugin/TradeMaster/templates/trademaster.twig
@@ -1,4 +1,4 @@
-{% if trademaster == 'on' %}
+{% if parameter('TradeMasterPlugin_enable') == 'on' %}
     <li class="nav-item dropdown hidden-caret">
         <a class="nav-link" data-toggle="dropdown" href="#" aria-expanded="false">
             <i class="fas fa-trademark"></i>
@@ -11,7 +11,7 @@
             <div class="quick-actions-scroll scrollbar-outer">
                 <div class="quick-actions-items">
                     <form action="/cup/task/run" method="post" class="row m-0" onsubmit="return confirm('Процесс обновления каталога займет какое-то время! Пожалуйста, убедитесь, что в данный момент не запущен другой процесс обновления! Вы действительно хотите выполнить сейчас?');">
-                        <button type="submit" name="task" value="App\Domain\Tasks\TradeMaster\CatalogSyncTask" class="col-12 col-md-12 p-0 btn btn-link">
+                        <button type="submit" name="task" value="Plugin\TradeMaster\Tasks\CatalogSyncTask" class="col-12 col-md-12 p-0 btn btn-link">
                             <div class="quick-actions-item">
                                 <i class="fas fa-store"></i>
                                 <span class="text">Обновить каталог</span>
