имена контроллеров добавлены

--- a/src/Template/cup/docs/dev/controller/catalog.cart.done.twig
+++ b/src/Template/cup/docs/dev/controller/catalog.cart.done.twig
@@ -3,6 +3,7 @@
 
     <code class="block pt-3 pb-3">App\Application\Actions\Common\Catalog\CartCompleteAction</code>
     <div>Route: <code class="block pt-3 pb-3">/cart/done/{order}</code></div>
+    <div>Name: <code class="block pt-3 pb-3">catalog:cart:done</code></div>
 
     <h4>Страница заказа</h4>
     {% include "cup/docs/dev/controller-table-vars.twig" with {
