--- a/src/Template/cup/docs/dev/controller/catalog.cart.twig
+++ b/src/Template/cup/docs/dev/controller/catalog.cart.twig
@@ -3,4 +3,5 @@
 
     <code class="block pt-3 pb-3">App\Application\Actions\Common\Catalog\CartAction</code>
     <div>Route: <code class="block pt-3 pb-3">/cart</code></div>
+    <div>Name: <code class="block pt-3 pb-3">catalog:cart</code></div>
 </div>
