--- a/src/Template/cup/docs/dev/controller/dynamicpage.twig
+++ b/src/Template/cup/docs/dev/controller/dynamicpage.twig
@@ -3,6 +3,7 @@
 
     <code class="block pt-3 pb-3">App\Application\Actions\Common\DynamicPageAction</code>
     <div>Route: <code class="block pt-3 pb-3">/{args:.*}</code></div>
+    <div>Name: <code class="block pt-3 pb-3">dynamic</code></div>
 
     <p>
         Контроллер обслуживающий: второстепенные страницы сайта, категории публикаций и публикации.
