--- a/src/Template/cup/docs/dev/controller/guestbook.twig
+++ b/src/Template/cup/docs/dev/controller/guestbook.twig
@@ -3,6 +3,7 @@
 
     <code class="block pt-3 pb-3">App\Application\Actions\Common\GuestBookAction</code>
     <div>Route: <code class="block pt-3 pb-3">/guestbook[/{page:[0-9]+}}]</code></div>
+    <div>Name: <code class="block pt-3 pb-3">guestbook</code></div>
 
     <h4>Страница гостевой книги</h4>
     {% include "cup/docs/dev/controller-table-vars.twig" with {
