--- a/src/Template/cup/docs/dev/controller/mainpage.twig
+++ b/src/Template/cup/docs/dev/controller/mainpage.twig
@@ -3,4 +3,5 @@
 
     <code class="block pt-3 pb-3">App\Application\Actions\Common\MainPageAction</code>
     <div>Route: <code class="block pt-3 pb-3">/</code></div>
+    <div>Name: <code class="block pt-3 pb-3">main</code></div>
 </div>
