doc update fixes!

--- a/src/Template/cup/docs/dev/controller/catalog.list.twig
+++ b/src/Template/cup/docs/dev/controller/catalog.list.twig
@@ -1,5 +1,5 @@
 <div class="pt-2">
-    <h3>Динамический каталог</h3>
+    <h3>Каталог</h3>
 
     <code class="block pt-3 pb-3">App\Application\Actions\Common\Catalog\ListAction</code>
     <div>Route: <code class="block pt-3 pb-3">/{{ parameter('catalog_address', 'catalog') }}[/{args:.*}]</code></div>
