--- a/src/Template/cup/docs/dev/controller/page.twig
+++ b/src/Template/cup/docs/dev/controller/page.twig
@@ -1,5 +1,5 @@
 <div class="pt-2">
-    <h3>Динамическая страница</h3>
+    <h3>Страницы</h3>
 
     <code class="block pt-3 pb-3">App\Application\Actions\Common\DynamicPageAction</code>
     <div>Route: <code class="block pt-3 pb-3">/{args:.*}</code></div>
