--- a/src/Template/cup/docs/dev/controller.twig
+++ b/src/Template/cup/docs/dev/controller.twig
@@ -23,7 +23,7 @@
                 <div class="col-xs-12 col-sm-5 col-md-4">
                     <div class="nav flex-column nav-pills nav-secondary" id="pills-tab" role="tablist">
                         <a class="nav-link" id="v-controller-tab-" data-toggle="pill" href="#v-controller-mainpage">Главная страница</a>
-                        <a class="nav-link" id="v-controller-tab-" data-toggle="pill" href="#v-controller-dynamicpage">Динамическая страница</a>
+                        <a class="nav-link" id="v-controller-tab-" data-toggle="pill" href="#v-controller-page">Страницы</a>
                         <a class="nav-link" id="v-controller-tab-" data-toggle="pill" href="#v-controller-guestbook">Гостевая книга</a>
                         <a class="nav-link" id="v-controller-tab-" data-toggle="pill" href="#v-controller-catalog-list">Каталог</a>
                         <a class="nav-link" id="v-controller-tab-" data-toggle="pill" href="#v-controller-catalog-cart">Каталог: Корзина</a>
@@ -35,8 +35,8 @@
                         <div class="tab-pane fade" id="v-controller-mainpage">
                             {% include 'cup/docs/dev/controller/mainpage.twig' %}
                         </div>
-                        <div class="tab-pane fade" id="v-controller-dynamicpage">
-                            {% include 'cup/docs/dev/controller/dynamicpage.twig' %}
+                        <div class="tab-pane fade" id="v-controller-page">
+                            {% include 'cup/docs/dev/controller/page.twig' %}
                         </div>
                         <div class="tab-pane fade" id="v-controller-guestbook">
                             {% include 'cup/docs/dev/controller/guestbook.twig' %}
