remove old files

--- a/src/Template/cup/docs/dev/controller.twig
+++ b/src/Template/cup/docs/dev/controller.twig
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header collapsed" id="controllerCollapseHeading" data-toggle="collapse" data-target="#controllerCollapse">
         <div class="span-icon">
-            <div class="flaticon-box-1"></div>
+            <i class="fas fa-file-alt"></i>
         </div>
         <div class="span-title">
             Контроллеры, параметры, переменные, HTTP(S) API
