--- a/src/Template/cup/docs/dev/tasks.twig
+++ b/src/Template/cup/docs/dev/tasks.twig
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header" id="tasksCollapseHeading" data-toggle="collapse" data-target="#tasksCollapse">
         <div class="span-icon">
-            <div class="flaticon-box-1"></div>
+            <i class="fas fa-file-alt"></i>
         </div>
         <div class="span-title">
             Dev Tasks
