--- a/src/Template/cup/docs/dev/template_mail.twig
+++ b/src/Template/cup/docs/dev/template_mail.twig
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header collapsed" id="templateMailCollapseHeading" data-toggle="collapse" data-target="#templateMailCollapse">
         <div class="span-icon">
-            <div class="flaticon-box-1"></div>
+            <i class="fas fa-file-alt"></i>
         </div>
         <div class="span-title">
             Шаблон письма
