--- a/src/Template/cup/docs/engine/requirements.twig
+++ b/src/Template/cup/docs/engine/requirements.twig
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header collapsed" id="requirementsCollapseHeading" data-toggle="collapse" data-target="#requirementsCollapse">
         <div class="span-icon">
-            <div class="flaticon-box-1"></div>
+            <i class="fas fa-file-alt"></i>
         </div>
         <div class="span-title">
             Требования к серверу
