--- a/src/Template/cup/docs/panel/page.twig
+++ b/src/Template/cup/docs/panel/page.twig
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header collapsed" id="pageCollapseHeading" data-toggle="collapse" data-target="#pageCollapse">
         <div class="span-icon">
-            <div class="flaticon-box-1"></div>
+            <i class="fas fa-file-alt"></i>
         </div>
         <div class="span-title">
             Страницы сайта
