--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -719,7 +719,7 @@
                                                             {% include 'cup/field.twig' with args %}
                                                         {% endfor %}
                                                     {% else %}
-                                                        <p>Плагин не имеет полей настроек</p>
+                                                        <p>Плагин не имеет настроек</p>
                                                     {% endif %}
                                                 </div>
                                             {% endfor %}
