--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -132,7 +132,7 @@
         </a>
     </li>
 
-    {% if plugins.count() %}
+    {% if plugins.where('navigation', true).count() %}
         <li class="nav-section">
             <span class="sidebar-mini-icon">
                 <i class="fa fa-ellipsis-h"></i>
