--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -21,15 +21,17 @@
                 <div class="main-header">
                     <!-- Logo Header -->
                     <div class="logo-header" data-background-color="blue">
+                        <a href="/" class="logo text-white">WebSpace Engine</a>
+
                         <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon">
-                                <i class="icon-menu"></i>
+                                <i class="fas fa-bars"></i>
                             </span>
                         </button>
                         <button class="topbar-toggler more"><i class="icon-options-vertical"></i></button>
                         <div class="nav-toggle">
                             <button class="btn btn-toggle toggle-sidebar">
-                                <i class="icon-menu"></i>
+                                <i class="fas fa-bars"></i>
                             </button>
                         </div>
                     </div>
